completed the faq block

--- a/index.html
+++ b/index.html
@@ -625,7 +625,44 @@
     <!-- блок «Ответы на частые вопросы» -->
     <div class="container">
       <section class="faq">
-        
+        <div class="faq__title">Ответы на часто задаваемые вопросы</div>
+        <div class="faq__item">
+          <div class="faq__inner">
+            <div class="faq__question">
+              <img src="img/faq-icon/icon-1.png" alt="">
+              <span>Из каких материалов вы изготавливаете жалюзи?</span>
+            </div>
+            <p class="faq__answer">Мы изготавливаем жалюзи исключительно из натурального дерева — бамбука, дуба, бука и других древесных пород.</p>
+          </div>
+          <div class="faq__inner">
+            <div class="faq__question">
+              <img src="img/faq-icon/icon-2.png" alt="">
+              <span>Как найти подходящий оттенок?</span>
+            </div>
+            <p class="faq__answer">МВыбор оттенка зависит от помещения, в котором будут установлены жалюзи. Комнату, которая расположена на северной половине отлично дополнят теплые тона — телесный, бежевый. При выборе жалюзи для комнаты в южной стороне квартиры обратите внимание на холодные оттенки — зеленый, бирюзовый.</p>
+          </div>
+          <div class="faq__inner">
+            <div class="faq__question">
+              <img src="img/faq-icon/icon-3.png" alt="">
+              <span>Правда ли, что деревянные жалюзи хуже пластиковых?</span>
+            </div>
+            <p class="faq__answer">Ни в коем случае. Деревянные жалюзи не уступают по качеству пластиковым.</p>
+          </div>
+          <div class="faq__inner">
+            <div class="faq__question">
+              <img src="img/faq-icon/icon-4.png" alt="">
+              <span>Как правильно ухаживать за жалюзи?</span>
+            </div>
+            <p class="faq__answer">Натуральное дерево — прихотливый материал, за которым требуется тщательный уход. Не протирайте ламели влажной тряпкой — воспользуйтесь сухой или слегка намоченной губкой. Также для очистки подойдет пылесос.</p>
+          </div>
+          <div class="faq__inner">
+            <div class="faq__question">
+              <img src="img/faq-icon/icon-5.png" alt="">
+              <span>Обязательно ли прибегать к сверлению?</span>
+            </div>
+            <p class="faq__answer">Если конструкция будет установлена без сверления, жалюзи будут легко сниматься. Кроме того, время установки сократится в 3 раза. Сверление обеспечивает более крепкое соединение жалюзи с поверхностью. В любом случае функциональность конструкции не пострадает.</p>
+          </div>
+        </div>
       </section>
     </div>
 
