--- a/index.html
+++ b/index.html
@@ -34,14 +34,12 @@
       </div>
     </section>
 
-    <div class="container">
-      <section class="banner">
-        <div class="banner__inner">
-          <div class="banner__title">«KATRIS» — деревянные жалюзи под размер окна + разработка дизайна + монтаж по доступной цене</div>
-          <button type="button" class="bigbtn">Рассчитать стоимость</button>
-        </div>
-      </section>
-    </div>
+    <section class="banner">
+      <div class="banner__inner">
+        <div class="banner__title">«KATRIS» — деревянные жалюзи под размер окна + разработка дизайна + монтаж по доступной цене</div>
+        <button type="button" class="bigbtn">Рассчитать стоимость</button>
+      </div>
+    </section>
 
     <!-- блок «Виды деревянных жалюзи» с формами заказа и ценой -->
     <div class="container">
@@ -599,28 +597,26 @@
     </div>
 
     <!-- блок «Этапы работы» -->
-    <div class="container">
-      <section class="work-stages">
-        <div class="work-stages__content">
-          <div class="work-stages__title">Этапы работы</div>
-          <div class="word-stages__info-block">
-            <p class="word-stages__info-text">Купить деревянные жалюзи в компании «KATRIS» — экономия времени и 100 % результат.</p>
-            <ul class="word-stages__info-list">
-              <li class="word-stages__info-link">Предварительная консультация и согласование пожеланий. На данном этапе консультанты соберут необходимую информацию и рассчитают стоимость проекта.</li>
-              <li class="word-stages__info-link">Замеры. На объект приедет наш замерщик, чтобы снять мерки для будущего изделия. Также специалисты возьмет с собой образцы ранее изготовленных изделий.</li>
-              <li class="word-stages__info-link">Проектирование и визуализация. Перед тем, как приступить к изготовлению дизайнеры спроектируют виртуальный макет изделия. Мы изготовим деревянные жалюзи после вашего одобрения.</li>
-              <li class="word-stages__info-link">Производство жалюзи. Ваш заказ будет изготовлен в течение 3 рабочих дней.</li>
-              <li class="word-stages__info-link">Доставка. Как только солнцезащитная система будет готова, мы доставим его до адреса. С вами свяжется оператор для согласования времени.</li>
-              <li class="word-stages__info-link">Установка. Малейшая ошибка при установке может привести к поломке конструкции. Во избежание подобных проблем мы возьмем монтаж на себя.</li>
-            </ul>
-            <p class="word-stages__info-text">Оформить заказ или уточнить детали сотрудничества можно по номеру телефона — +78123372405 или через электронную почту — info.katris@mail.ru. Также вы можете лично посетить наш офис в Санкт-Петербурге.</p>
-          </div>
-          <div class="blinds__btn">
-            <button class="bigbtn" type="button">Рассчитать стоимость</button>
-          </div>
+    <section class="work-stages">
+      <div class="work-stages__content">
+        <div class="work-stages__title">Этапы работы</div>
+        <div class="word-stages__info-block">
+          <p class="word-stages__info-text">Купить деревянные жалюзи в компании «KATRIS» — экономия времени и 100 % результат.</p>
+          <ul class="word-stages__info-list">
+            <li class="word-stages__info-link">Предварительная консультация и согласование пожеланий. На данном этапе консультанты соберут необходимую информацию и рассчитают стоимость проекта.</li>
+            <li class="word-stages__info-link">Замеры. На объект приедет наш замерщик, чтобы снять мерки для будущего изделия. Также специалисты возьмет с собой образцы ранее изготовленных изделий.</li>
+            <li class="word-stages__info-link">Проектирование и визуализация. Перед тем, как приступить к изготовлению дизайнеры спроектируют виртуальный макет изделия. Мы изготовим деревянные жалюзи после вашего одобрения.</li>
+            <li class="word-stages__info-link">Производство жалюзи. Ваш заказ будет изготовлен в течение 3 рабочих дней.</li>
+            <li class="word-stages__info-link">Доставка. Как только солнцезащитная система будет готова, мы доставим его до адреса. С вами свяжется оператор для согласования времени.</li>
+            <li class="word-stages__info-link">Установка. Малейшая ошибка при установке может привести к поломке конструкции. Во избежание подобных проблем мы возьмем монтаж на себя.</li>
+          </ul>
+          <p class="word-stages__info-text">Оформить заказ или уточнить детали сотрудничества можно по номеру телефона — +78123372405 или через электронную почту — info.katris@mail.ru. Также вы можете лично посетить наш офис в Санкт-Петербурге.</p>
         </div>
-      </section>
-    </div>
+        <div class="blinds__btn">
+          <button class="bigbtn" type="button">Рассчитать стоимость</button>
+        </div>
+      </div>
+    </section>
 
     <!-- блок «Ответы на частые вопросы» -->
     <div class="container">
@@ -661,6 +657,30 @@
               <span>Обязательно ли прибегать к сверлению?</span>
             </div>
             <p class="faq__answer">Если конструкция будет установлена без сверления, жалюзи будут легко сниматься. Кроме того, время установки сократится в 3 раза. Сверление обеспечивает более крепкое соединение жалюзи с поверхностью. В любом случае функциональность конструкции не пострадает.</p>
+          </div>
+        </div>
+      </section>
+    </div>
+
+    <!-- блок «Примеры работ» -->
+    <div class="container">
+      <section class="work-examples">
+        <div class="work-examples__content">
+          <div class="work-examples__title">Примеры работ</div>
+          <p class="work-examples__text">Мы регулярно публикуем примеры изготовленных нами жалюзи. Ниже представлены примеры наших работ. Расчет стоимости осуществляется оператором после обработки заказа и согласования деталей.</p>
+        </div>
+        <div class="work-examples__item">
+          <div class="work-examples__inner">
+            <img src="img/work-examples/example-1.jpg" alt="">
+          </div>
+          <div class="work-examples__inner">
+            <img src="img/work-examples/example-2.jpg" alt="">
+          </div>
+          <div class="work-examples__inner">
+            <img src="img/work-examples/example-3.jpg" alt="">
+          </div>
+          <div class="work-examples__inner">
+            <img src="img/work-examples/example-4.jpg" alt="">
           </div>
         </div>
       </section>
